[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment_playground"
version = "0.1.2"
authors = [
	{ name="lizzcondrey", email="asdfasdfd@mail.com" },
]
description = "Experiment project for working with automation and devops practices"
requires-python = ">= 3.9.13"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["DevOps", "Automation", "Investigations", "Experiments"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering"
]

dependencies = [
	"aac >= 0.4.3",
]
[project.optional-dependencies]
doc = [
	"sphinx ~= 6.1.3",
	"sphinx-autobuild ~= 2021.3.14",
	"sphinx_contributors >= 0.2.7",
	"sphinx-copybutton >= 0.5.2",
	"sphinxcontrib-applehelp ~= 1.0.2",
    "sphinxcontrib-devhelp ~= 1.0.2",
    "sphinxcontrib-htmlhelp ~= 2.0.0",
    "sphinxcontrib-jsmath ~= 1.0.1",
    "sphinxcontrib-qthelp ~= 1.0.3",
    "sphinxcontrib-serializinghtml ~= 1.1.9",
	"docutils ~= 0.19",
	"furo >= 2024.1.29",
	"myst-parser >= 2.0.0",
	"pytz ~= 2023.3"
]
test = [
	"behave >= 1.2.6",
	"build >= 1.1.1",
	"coverage >= 7.4.3",
	"flake8 >= 4.0.0",
	"nose2 >= 0.10.0",
	"pipdeptree >= 2.16.1",
	"pyflakes >= 2.4",
	"tox >= 3.24"
]
all = [
	"aac >= 0.4.3",
	"experiment_playground[doc]",
	"experiment_playground[test]"
]
